--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(rkpp_animals)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(rkpp_animals main.cpp)
+add_executable(rkpp_animals main.cpp
+        Animals.cpp)
